# A-little-look

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
scripts/: diagnose_backtest.py
src/polymarket_edge/: __init__.py  backtest.py  books.py  cli.py  features.py  ingest.py  label.py  models.py  web.py
src/polymarket_edge/clients/: clob.py  gamma.py  subgraph.py
src/polymarket_edge/templates/: base.html  index.html  labels.html  trades.html
tests/: test_backtest.py  test_features.py  test_label.py  test_models.py  test_web.py
