[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-edge"
version = "0.1.0"
description = "Research + backtest tool for the Polymarket 50/50 invalidation edge"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.1",
    "pyarrow>=15",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
polymarket-edge = "polymarket_edge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
polymarket_edge = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
